# spark_sql

./: README.md  pyproject.toml  pysql.py  spark_sql_paralell.py
02_03_dataframe_api_sql/: large_file.py  limpia_cache.py  pandas_sql_csv.py  spark_sql_csv.py  spark_sql_parquet.py
04_integracion_otras_fuentes/: lectura_escritura.py  spark_mongodb.py
05_Optimizacion/: memory_cache.py  optimizacion.py  optimizacion2.py  readme.MD
06_funcionalidades_avanzadas/: filtrado_dinamico.py  filtrado_dinamico2.py  spark_udf.py
