[tool.poetry]
name = "organiztionspark"
version = "0.1.0"
description = ""
authors = ["sandraclv <sclizaran@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
pandas = "^2.2.0"
datetime = "^5.4"
pyarrow = "*"
pandasql = "^0.7.3"
spark = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
